# qoder4huhu

./: .clang-format  .clang-tidy  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  COMMIT_CONVENTION.md  GITHUB_SETUP.md  IMPLEMENTATION_SUGGESTIONS.md  README.md  build.sh  clean.sh  format.bat  format.sh  lint.bat  lint.sh  main.cpp  run_tests.bat  run_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-review.yml
Common/: CMakeLists.txt
Common/include/: CommonTypes.h
DataLayer/: CMakeLists.txt
DataLayer/include/: KeyboardSimulator.h  MouseSimulator.h  ScreenCapture.h  WindowManager.h
DataLayer/src/: KeyboardSimulator.cpp  MouseSimulator.cpp  ScreenCapture.cpp  WindowManager.cpp
PresentationLayer/: CMakeLists.txt  README.md
PresentationLayer/include/: WindowController.h
PresentationLayer/src/: WindowController.cpp
ServiceLayer/: CMakeLists.txt
ServiceLayer/include/: BoundWindow.h  WindowBindingService.h
ServiceLayer/src/: BoundWindow.cpp  WindowBindingService.cpp
UILayer/: CMakeLists.txt
UILayer/include/: MainWindow.h
UILayer/src/: MainWindow.cpp  main.cpp
test/: CMakeLists.txt  README.md  SmokeTest.cpp
test/test_results/: README.md
